--- a/Pages/Creazioni/Creazioni.html
+++ b/Pages/Creazioni/Creazioni.html
@@ -34,6 +34,9 @@
       <div class="black-box">a</div>
       <div class="black-box">a</div>
       <div class="black-box">a</div>
+      <div class="black-box">a</div>
+      <div class="black-box">a</div>
+      <div class="black-box">a</div>
     </div>
   </body>
 </html>
