pagina creazione responsive

--- a/Pages/Creazioni/Creazioni.html
+++ b/Pages/Creazioni/Creazioni.html
@@ -18,17 +18,15 @@
         <li class="bold">CHI SIAMO</li>
       </ul>
     </nav>
-    <div
-      style="
-        display: flex;
-        justify-content: flex-start;
-        width: 75%;
-        margin: 20px auto;
-      "
-    >
+    <div class="creazione-navbar">
       <div class="box-creazioni">
         <h1>CREAZIONI</h1>
       </div>
+      <ul class="mobile-navbar">
+        <li class="bold">HOME</li>
+        <li class="bold">TATUAGGI</li>
+        <li class="bold">CHI SIAMO</li>
+      </ul>
     </div>
     <div class="photos-box">
       <div class="black-box">a</div>
