--- a/Pages/Creazioni/Creazioni.html
+++ b/Pages/Creazioni/Creazioni.html
@@ -13,9 +13,9 @@
   <body>
     <nav class="navbar">
       <ul>
-        <li class="bold">HOME</li>
-        <li class="bold">TATUAGGI</li>
-        <li class="bold">CHI SIAMO</li>
+        <li style="cursor: pointer;" class="bold"><a href="../index/index.html">HOME</a></li>
+        <li style="cursor: pointer;" class="bold"><a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
+        <li style="cursor: pointer;" class="bold"><a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
       </ul>
     </nav>
     <div class="creazione-navbar">
@@ -23,9 +23,9 @@
         <h1>CREAZIONI</h1>
       </div>
       <ul class="mobile-navbar">
-        <li class="bold">HOME</li>
-        <li class="bold">TATUAGGI</li>
-        <li class="bold">CHI SIAMO</li>
+        <li class="bold"><a href="../index/index.html">HOME</a></li>
+        <li class="bold"> <a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
+        <li class="bold"> <a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
       </ul>
     </div>
     <div class="photos-box">
