--- a/Pages/chi-siamo/chi-siamo.html
+++ b/Pages/chi-siamo/chi-siamo.html
@@ -9,9 +9,9 @@
 <body>
     <nav class="navbar">
         <ul>
-          <li class="bold">HOME</li>
-          <li class="bold">TATUAGGI</li>
-          <li class="bold">CHI SIAMO</li>
+          <li style="cursor: pointer;" class="bold"><a href="../index/index.html">HOME</a></li>
+          <li style="cursor: pointer;" class="bold"><a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
+          <li style="cursor: pointer;" class="bold"><a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
         </ul>
       </nav>
     <div class="creazione-navbar">
