--- a/Pages/index/index.html
+++ b/Pages/index/index.html
@@ -16,15 +16,21 @@
         </div>
         <ul>
             <li>
-                <h1>HOME</h1>
+                <a href="../index/index.html">
+                    <h1>HOME</h1>
+                </a>
             </li>
             <li>
-                <h1>TATUAGGI</h1>
+                <a href="../Creazioni/Creazioni.html">
+                    <h1>TATUAGGI</h1>
+                </a>
                 <p class="under-text">CREAZIONI</p>
                 <p class="under-text">CURA E PRODOTTI</p>
             </li>
             <li>
-                <h1>CHI SIAMO</h1>
+                <a href="../chi-siamo/chi-siamo.html">
+                    <h1>CHI SIAMO</h1>
+                </a>
                 <p class="under-text">CONTATTI</p>
             </li>
         </ul>
