--- a/Pages/Creazioni/Creazioni.html
+++ b/Pages/Creazioni/Creazioni.html
@@ -23,18 +23,30 @@
         <h1>CREAZIONI</h1>
       </div>
       <ul class="mobile-navbar">
-        <li class="bold"><a href="../index/index.html">HOME</a></li>
-        <li class="bold"> <a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
-        <li class="bold"> <a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
+        <li style="cursor: pointer;" class="bold"><a href="../index/index.html">HOME</a></li>
+        <li style="cursor: pointer;" class="bold"> <a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
+        <li style="cursor: pointer;" class="bold"> <a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
       </ul>
     </div>
     <div class="photos-box">
-      <div class="black-box">a</div>
-      <div class="black-box">a</div>
-      <div class="black-box">a</div>
-      <div class="black-box">a</div>
-      <div class="black-box">a</div>
-      <div class="black-box">a</div>
+      <div class="black-box">
+        <img class="img-resize" src="../../img/Tattoos/1704111908535-d3af9bff-3b91-419c-afdb-af27603a4015_1.jpg" alt="tattoo1">
+      </div>
+      <div class="black-box">
+        <img class="img-resize" src="../../img/Tattoos/1704111908535-d3af9bff-3b91-419c-afdb-af27603a4015_10.jpg" alt="tattoo2">
+      </div>
+      <div class="black-box">
+        <img class="img-resize" src="../../img/Tattoos/1704111908535-d3af9bff-3b91-419c-afdb-af27603a4015_11.jpg" alt="tattoo3">
+      </div>
+      <div class="black-box">
+        <img class="img-resize" src="../../img/Tattoos/1704111908535-d3af9bff-3b91-419c-afdb-af27603a4015_12.jpg" alt="tattoo4">
+      </div>
+      <div class="black-box">
+        <img class="img-resize" src="../../img/Tattoos/1704111908535-d3af9bff-3b91-419c-afdb-af27603a4015_13.jpg" alt="tattoo5">
+      </div>
+      <div class="black-box">
+        <img class="img-resize" src="../../img/Tattoos/1704111908535-d3af9bff-3b91-419c-afdb-af27603a4015_14.jpg" alt="tattoo6">
+      </div>
     </div>
   </body>
 </html>
