--- a/Pages/Creazioni/Creazioni.html
+++ b/Pages/Creazioni/Creazioni.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <ul>
+      <ul class="nav-big-screen">
         <li style="cursor: pointer;" class="bold"><a href="../index/index.html">HOME</a></li>
         <li style="cursor: pointer;" class="bold"><a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
         <li style="cursor: pointer;" class="bold"><a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
@@ -24,8 +24,8 @@
       </div>
       <ul class="mobile-navbar">
         <li style="cursor: pointer;" class="bold"><a href="../index/index.html">HOME</a></li>
-        <li style="cursor: pointer;" class="bold"> <a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
-        <li style="cursor: pointer;" class="bold"> <a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
+        <li style="cursor: pointer;" class="bold"><a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
+        <li style="cursor: pointer;" class="bold"><a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
       </ul>
     </div>
     <div class="photos-box">
