--- a/Pages/chi-siamo/chi-siamo.html
+++ b/Pages/chi-siamo/chi-siamo.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="chi-siamo.css">
-    <title>Document</title>
+    <title>Chi siamo</title>
 </head>
 <body>
     <nav class="navbar">
-        <ul>
+        <ul class="nav-big-screen">
           <li style="cursor: pointer;" class="bold"><a href="../index/index.html">HOME</a></li>
           <li style="cursor: pointer;" class="bold"><a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
           <li style="cursor: pointer;" class="bold"><a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
