--- a/Pages/Creazioni/Creazioni.html
+++ b/Pages/Creazioni/Creazioni.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <link rel="stylesheet" href="./Creazioni.css" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Creazioni</title>
   </head>
   <body>
+    <div class="mobile-box-creazioni">
+      <h1>CREAZIONI</h1>
+    </div>
     <nav class="navbar">
       <ul class="nav-big-screen">
         <li style="cursor: pointer;" class="bold"><a href="../index/index.html">HOME</a></li>
