--- a/Pages/chi-siamo/chi-siamo.html
+++ b/Pages/chi-siamo/chi-siamo.html
@@ -18,18 +18,17 @@
 
             <div class="box-creazioni">
                 <div id="box-testo-1" class="box-testo">
-
                     <h1>CHI SIAMO</h1>
                 </div>
                 <div class="box-testo">
 
-                    <h1>CONTATTI</h1>
+                    <h1 class="text">CONTATTI</h1>
                 </div>
             </div>
             <ul class="mobile-navbar">
-                <li class="bold">HOME</li>
-                <li class="bold">TATUAGGI</li>
-                <li class="bold">CHI SIAMO</li>
+                <li class="bold"> <a href="../index/index.html">HOME</a></li>
+                <li class="bold"><a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
+                <li class="bold"><a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
             </ul>
             <div class="box-due">
                 <div class="wth">
