--- a/Pages/chi-siamo/chi-siamo.html
+++ b/Pages/chi-siamo/chi-siamo.html
@@ -11,6 +11,7 @@
         <ul class="nav-big-screen">
           <li style="cursor: pointer;" class="bold"><a href="../index/index.html">HOME</a></li>
           <li style="cursor: pointer;" class="bold"><a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
+          <li style="cursor: pointer;" class="bold"><a href="../curaProdotti/curaProdotti.html">CURA E PRODOTTI</a></li>
           <li style="cursor: pointer;" class="bold"><a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
         </ul>
       </nav>
@@ -28,11 +29,15 @@
             <ul class="mobile-navbar">
                 <li class="bold"> <a href="../index/index.html">HOME</a></li>
                 <li class="bold"><a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
+                <li class="bold"><a href="../curaProdotti/curaProdotti.html">CURA E PRODOTTI</a></li>
                 <li class="bold"><a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
             </ul>
             <div class="box-due">
                 <div class="wth">
-                    <div class="text-box">ddddd</div>
+                    <div class="text-box">
+                        ML TATOO rappresenta uno studio professionale e garantisce l'uso di colori atossici e anallergici certificati dal produttore, materiale sterile e monouso seguendo ogni norma igienico
+sanitaria nella pulizia e nella sterilizzazione dei propri materiali.
+                    </div>
                 </div>
                 <div class="box-contatti">
                     <div class="single-info-box">
