--- a/Pages/curaProdotti/curaProdotti.html
+++ b/Pages/curaProdotti/curaProdotti.html
@@ -9,9 +9,14 @@
 <body>
     <nav class="navbar">
         <ul>
-          <li class="bold">HOME</li>
-          <li class="bold">TATUAGGI</li>
-          <li class="bold">CHI SIAMO</li>
+          <li class="bold">
+            <a href="../index/index.html">HOME</a></li>
+          <li class="bold">
+            <a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
+            <li class="bold">
+              <a href="../Creazioni/Creazioni.html">CURA E PRODOTTI</a></li>
+          <li class="bold">
+            <a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
         </ul>
       </nav>
       <div class="creazione-navbar">
@@ -19,23 +24,51 @@
           <h1>CURA E PRODOTTI</h1>
         </div>
         <ul class="mobile-navbar">
-          <li class="bold">HOME</li>
-          <li class="bold">TATUAGGI</li>
-          <li class="bold">CHI SIAMO</li>
+          <li class="bold">
+            <a href="../index/index.html">HOME</a></li>
+          <li class="bold">
+            <a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
+            <li class="bold">
+              <a href="../Creazioni/Creazioni.html">CURA E PRODOTTI</a></li>
+          <li class="bold">
+            <a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
         </ul>
       </div>
       <div class="body-box">
         <div class="text-box">
             <div class="articlebox">
-                <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit distinctio optio id beatae rem aspernatur deleniti accusamus adipisci repudiandae quidem? Velit tempore at doloremque magnam eveniet, ullam vero aliquam soluta?
-                Repellendus aut labore laborum dolorem omnis eveniet iusto molestiae iure voluptatum repellat earum, quis neque quia aliquam amet magnam sit quisquam quae quam quibusdam nemo error? Consectetur eligendi eaque illo.
+                <article style="margin-bottom: 20px;font-weight: bold;">Hai fatto il grande passo e sfoggi la prima opera d'arte sulla tua pelle? Ora vorrai che resti
+                  splendida per sempre.
+                  Per preservare i colori vividi, la forma definita e la durata del tuo tatuaggio, è essenziale
+                  prendertene cura al meglio nei primi 30 giorni dopo un tatuaggio seguendo dei semplici passi:</article>
+
+                  <article style="font-weight: bold;">
+                    • Fai attenzione all'igiene con un detergente lenitivo delicato due volte al giorno<br>
+                    • Prosegui applicando una crema lenitiva con SPF per lenire la pelle tatuata protegga da
+                    un'iperpigmentazione (scolorimento marrone del tatuaggio)<br>
+                    • Evita l'idromassaggio, la sauna e la piscina. Indossa capi morbidi e ampi per evitare sfregamenti sulla pelle<br>
+                    • Evita di toccare o grattare il tatuaggio poiché potrebbe perdere definizione e nitidezza<br>
+                  </article>
                 </article>
+                    <article style="margin-top: 20px;font-weight: bold;">
+                      A lungo termine, continua a prenderti cura del tuo tatuaggio con un'idratazione regolare e
+                      una protezione solare quotidiana per mantenerlo perfetto e proteggere il colore dallo sbiadimento.
+                      TI SERVIRANNO:
+                       1. Gel detergente lenitivo, delicato e sicuro da utilizzare sulla pelle fragile.
+                       2. una crema lenitiva con una protezione UVA/UVB ad ampio spettro che svolge una funzione lenitiva, riparatrice e protettiva.
+                       3. Per dare sollievo al prurito utilizza un'acqua termale.
+                    </article>
             </div>
         </div>
         <div class="squares-box">
             <div class="square-position">
-                <div class="black-box margin-start">d</div>
-                <div class="black-box margin-end">d</div>
+                <div class="black-box">
+                  <img class="img-resize" src="../../img/Tattoos/1704111908535-d3af9bff-3b91-419c-afdb-af27603a4015_9.jpg">
+                </div>
+                <div class="black-box margin-end">
+                  <img class="img-resize" src="../../img/Tattoos/1704111908535-d3af9bff-3b91-419c-afdb-af27603a4015_5.jpg">
+
+                </div>
             </div>
         </div>
       </div>
