--- a/Pages/index/index.html
+++ b/Pages/index/index.html
@@ -16,18 +16,23 @@
         </div>
         <ul>
             <li>
-                <a href="../index/index.html">
-                    <h1>HOME</h1>
+                <a style="font-weight: bold;margin-bottom: 20px;" href="../index/index.html">
+                    <p>HOME</p>
                 </a>
             </li>
             <li>
-                <a href="../Creazioni/Creazioni.html">
-                    <h1>TATUAGGI</h1>
+                <a style="font-weight: bold;margin-bottom: 20px;" href="../Creazioni/Creazioni.html">
+                    <p>TATUAGGI</p>
                 </a>
             </li>
             <li>
-                <a href="../chi-siamo/chi-siamo.html">
-                    <h1>CHI SIAMO</h1>
+                <a style="font-weight: bold;margin-bottom: 20px;" href="../curaProdotti/curaProdotti.html">
+                    <p>CURA E PRODOTTI</p>
+                </a>
+            </li>
+            <li>
+                <a style="font-weight: bold;margin-bottom: 20px;" href="../chi-siamo/chi-siamo.html">
+                    <p>CHI SIAMO</p>
                 </a>
             </li>
         </ul>
@@ -36,7 +41,6 @@
     <div class="box-right">
         <div class="temporary-empty-box"></div>
         <div class="box-center">
-            FOTO TATUAGGIO O TATUATRICE BIANCONERA
         </div>
 
 
