--- a/Pages/Creazioni/Creazioni.html
+++ b/Pages/Creazioni/Creazioni.html
@@ -17,6 +17,7 @@
       <ul class="nav-big-screen">
         <li style="cursor: pointer;" class="bold"><a href="../index/index.html">HOME</a></li>
         <li style="cursor: pointer;" class="bold"><a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
+        <li style="cursor: pointer;" class="bold"><a href="../curaProdotti/curaProdotti.html">CURA E PRODOTTI</a></li>
         <li style="cursor: pointer;" class="bold"><a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
       </ul>
     </nav>
@@ -27,6 +28,7 @@
       <ul class="mobile-navbar">
         <li style="cursor: pointer;" class="bold"><a href="../index/index.html">HOME</a></li>
         <li style="cursor: pointer;" class="bold"><a href="../Creazioni/Creazioni.html">TATUAGGI</a></li>
+        <li style="cursor: pointer;" class="bold"><a href="../chi-siamo/chi-siamo.html">CURA PRODOTTI</a></li>
         <li style="cursor: pointer;" class="bold"><a href="../chi-siamo/chi-siamo.html">CHI SIAMO</a></li>
       </ul>
     </div>
