--- a/Pages/curaProdotti/curaProdotti.html
+++ b/Pages/curaProdotti/curaProdotti.html
@@ -49,8 +49,11 @@
                     • Evita l'idromassaggio, la sauna e la piscina. Indossa capi morbidi e ampi per evitare sfregamenti sulla pelle<br>
                     • Evita di toccare o grattare il tatuaggio poiché potrebbe perdere definizione e nitidezza<br>
                   </article>
+                  <div class="black-box">
+                    <img class="img-resize" src="../../img/Tattoos/1704111908535-d3af9bff-3b91-419c-afdb-af27603a4015_9.jpg">
+                  </div>
                 </article>
-                    <article style="margin-top: 20px;font-weight: bold;">
+                    <article style="font-weight: bold;">
                       A lungo termine, continua a prenderti cura del tuo tatuaggio con un'idratazione regolare e
                       una protezione solare quotidiana per mantenerlo perfetto e proteggere il colore dallo sbiadimento.
                       TI SERVIRANNO:
@@ -58,19 +61,13 @@
                        2. una crema lenitiva con una protezione UVA/UVB ad ampio spettro che svolge una funzione lenitiva, riparatrice e protettiva.
                        3. Per dare sollievo al prurito utilizza un'acqua termale.
                     </article>
+                    <div class="black-box margin-end">
+                      <img class="img-resize" src="../../img/Tattoos/1704111908535-d3af9bff-3b91-419c-afdb-af27603a4015_5.jpg">
+    
+                    </div>
             </div>
         </div>
-        <div class="squares-box">
-            <div class="square-position">
-                <div class="black-box">
-                  <img class="img-resize" src="../../img/Tattoos/1704111908535-d3af9bff-3b91-419c-afdb-af27603a4015_9.jpg">
-                </div>
-                <div class="black-box margin-end">
-                  <img class="img-resize" src="../../img/Tattoos/1704111908535-d3af9bff-3b91-419c-afdb-af27603a4015_5.jpg">
-
-                </div>
-            </div>
-        </div>
+        
       </div>
 </body>
 </html>
